@@ -129,6 +129,7 @@ These are classes for components.
 @import 'components/privacy-indicator';
 @import 'components/status-tag';
 @import 'components/button-select';
+@import 'components/skiplink';
 
 
 /* OVERRIDES
